[package]
version = "0.0.1"
name = "slorz"
repository = "https://github.com/yaxollum/slorz"
authors = ["Peter Ye"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
chrono = {version= "0.4.19", features = ["serde","wasmbind"]}
uuid = "0.8.2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
